--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "spell-check": "cspell **/*.js **/*.jsx **/*.ts **/*.tsx **/*.md --exclude **/node_modules/** --exclude **/dist/** --no-progress"
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.2",
