--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.4.2",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-pdf": "^5.7.1",
+    "react-intersection-observer": "^9.8.2",
     "react-parallax-tilt": "^1.7.222",
+    "react-pdf": "^5.7.1",
     "react-router-dom": "^6.22.3",
     "react-tsparticles": "^2.12.2",
     "typewriter-effect": "^2.21.0"
